--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ h2{
     font-size: 2rem;
     /* margin-bottom:0px; */
 }
-/* h3{
+h3{
     text-align: center;
     color: yellow;
     font-size: 3rem;
-} */
+}
 
 .round{
     border-radius: 100px; /* Радиус скругления */
